Fixed the issue with map not showing up on mobile

--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -454,7 +454,8 @@ button.showfavoriates {
 
 .favDialog {
   position: absolute;
-  background: #221f1f;
+  background: #131212;
+  height: 250px;
   width: 100%;
   z-index: 10; }
 
@@ -467,7 +468,7 @@ button.showfavoriates {
   top: 250px; }
 
 .hideFavDialog {
-  top: -1000px;
+  top: -500px;
   position: absolute; }
 
 .user-results {
@@ -639,4 +640,8 @@ footer {
       display: flex; }
       .map-scroll-tile {
         border-right: 1px solid #afafaf;
-        min-width: 200px; } }
+        min-width: 200px;
+        overflow: hidden; }
+    .map-container {
+      width: 100%;
+      height: 260px; } }
