--- a/dev/styles/partials/_media-queries.scss
+++ b/dev/styles/partials/_media-queries.scss
@@ -79,7 +79,12 @@
       &-tile {
         border-right: 1px solid $grey;
         min-width: 200px;
+        overflow: hidden;
       }
+    }
+    &-container {
+      width: 100%;
+      height: 260px;
     }
   }
 }
